[tool.poetry]
name = "pi-miniflux"
version = "0.1.0"
description = ""
authors = ["Chris Barry <me@chrisb.xyz>"]

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"

[tool.poetry.scripts]
start = "pi_miniflux.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
python-dotenv = "^0.17.0"
miniflux = "^0.0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta:__legacy__"
